# blebridge

./: .dockerignore  .gitignore  .mise.toml  CLAUDE.md  CONTEXT.md  Cargo.toml  Dockerfile  Dockerfile.rust  README.md  antsend.py  blebridge.py  compose.example.yaml  compose.rust.yaml  compose.yaml  docker-compose.yml  flake.nix  next-debug-steps.md  pyproject.toml  qt_brigde.py
.github/workflows/: ci.yaml  release.yaml
docs/adr/: 0001-rust-rewrite.md  0002-raw-ftms-passthrough.md
handoff/: blebridge-handoff-control-commands-2.md  blebridge-handoff-control-commands-3.md  blebridge-handoff-control-commands.md
src/: ant.rs  app_endpoint.rs  command.rs  ftms.rs  link.rs  main.rs  sdm.rs
src/blebridge/: __main__.py  antsend.py  ble_central.py  ble_peripheral.py  ftms.py  gui2.py  qt_brigde.py
tests/: test_ftms_fixtures.py
tests/fixtures/ftms/: README.md  session-20260703-highspeed.jsonl  session-20260703.jsonl
tools/: capture_ftms.py  control_treadmill.py  fake_treadmill.py  test_bt.py
