[project]
name = "blebridge"
version = "0.1.0"
description = "Bridges a BLE FTMS treadmill to ANT+ (Garmin watches) and re-advertises as a BLE peripheral."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "PyGObject<3.50",
    "dbus-python>=1.3.2",
    "bluezero>=0.8.0",
    "openant>=1.2.0",
    "pyusb>=1.2.1"
]

[project.optional-dependencies]
gui = [
    "PyQt5>=5.15.10"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
